--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,7 @@
   "description": "",
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
-    "express": "^5.1.0",
-    "mongoose": "^8.13.2",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.4.7",
+    "express": "^5.1.0"
   }
 }
